@@ -7,6 +7,8 @@ legacy cack like joystick/midi support only pollutes configs if enabled
 
 fixed a memory leak in the sound code
 
+fixed even more (hopefully all) dropped sound issues in snd_dma
+
 made com_soundmegs SLIGHTLY less broken: now only 2x instead of 3x  :P
 note that "soundmegs" are taken FROM THE HUNK now to fix the leak
 so you need to increase com_hunkmegs by 2x your com_soundmegs
@@ -19,7 +21,9 @@ hyperspace is a bit less annoying
 
 purged the unused (never finished) idMD4 model code
 
-fixed some more dropped sound issues in snd_dma
+fixed some bugs in referencedpak list generation
+
+fixed roqs ignoring s_volume
 
 
 18 Feb 08 - 1.41
